# cloud_robot

cloud_robot/: CMakeLists.txt  package.xml  plugin.xml  setup.cfg  setup.py
cloud_robot/config/: cloud_hardware.yaml
cloud_robot/include/cloud_robot/: Track.cpp  diffdrive_hw.hpp  servo_hw.hpp  track.hpp
cloud_robot/launch/: bringup_launch.py
cloud_robot/src/: Track.hpp  diffdrive_hw.cpp  servo_hw.cpp  track.cpp
cloud_robot/urdf/: URDF_DIRECCION_X.xacro  ros2_control.xacro
